--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissor">Scissor</button>
+    <div id="displayRound"></div>
+    <div id="playerScore"></div>
+    <div id="computerScore"></div>
+    <div id="displayMatch"></div>
 </body>
 </html>
